--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 body{
     
-    background-image: url(Image/background.jpg);
+    background-image: url(background.jpg);
     height: 100%;
     background-repeat: no-repeat;
     background-size: contain;
